<resources>
    <string name="text_todo">Not implemented yet!</string>
    <string name="app_name">Maevent</string>
    <string name="text_welcome">Your major events in one place!</string>
    <string name="text_config_profile">Configure</string>
    <string name="text_profile">Profile</string>
    <string name="text_logout">Log out</string>
    <string name="text_support">Support</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_no_pending_event">No pending event! Join or create one.</string>
    <string name="text_rsvp">RSVP</string>
    <string name="text_end">End</string>
    <string name="text_live">Live</string>
    <string name="text_in_a_while">In a while</string>
    <string name="text_hours">hours</string>
    <string name="text_in">In</string>
    <string name="text_tomorrow">Next day</string>
    <string name="text_within_day">Within day</string>
    <string name="text_location">City</string>
    <string name="text_refresh">Refresh</string>

    <string name="abbrev_mins">MINS</string>
    <string name="abbrev_hours">HRS</string>
    <string name="abbrev_days">DAYS</string>

    <string name="toolbar_title_agenda">Join</string>
    <string name="toolbar_title_live_event">Network</string>
    <string name="toolbar_title_create_event">Create</string>
    <string name="toolbar_title_invite_users">Invite collegues</string>

    <string name="configure_profile_preview">PREVIEW</string>
    <string name="configure_profile_save">SAVE</string>
    <string name="configure_profile_cancel">Cancel</string>
    <string name="configure_profile_introduction_label">Introduction</string>
    <string name="configure_profile_contact_label">Contact</string>
    <string name="configure_profile_tags_picker_label">Tags</string>
    <string name="configure_profile_cancel_dialog_title">Discard changes</string>
    <string name="configure_profile_cancel_dialog_subtitle">Are you sure?</string>

    <string name="configure_profile_first_name_label">FIRST NAME</string>
    <string name="configure_profile_last_name_label">LAST NAME</string>
    <string name="configure_profile_pose_label">POSE</string>
    <string name="configure_profile_headline_label">HEADLINE</string>
    <string name="configure_profile_add_tag">Add Tag</string>

    <string name="profile_rank_label">Rank</string>

    <string-array name="configure_profile_ranks">
        <item>@string/profile_rank_label</item>
        <item>B.Sc.</item>
        <item>M.Sc.</item>
        <item>Phd.</item>
    </string-array>

    <string name="main_join_event">Join</string>
    <string name="main_add_attendee">+Attendee</string>

    <string name="main_agenda_label">Agenda</string>
    <string name="main_description_label">Description</string>
    <string name="main_event_wall_label">Wall</string>
    <string name="main_live_event_label">Live</string>
    <string name="main_create_event_label">Mavent</string>

    <string name="main_incoming_events_starting_event">Starting</string>

    <string name="main_incoming_events_label">Incoming events</string>
    <string name="main_incoming_events_prompt">The list is empty. Uff!</string>
    <string name="main_invitations_label">Invitations</string>
    <string name="main_invitations_prompt">No pending invitations.</string>

    <string name="main_live_event_not_started">Event not started yet!</string>

    <string name="main_create_event_select_name">Select name</string>
    <string name="main_create_event_select_time">Select time</string>
    <string name="main_create_event_select_place">Select place</string>
    <string name="main_create_event_select_rsvp">Select RSVP</string>
    <string name="main_create_event_button_tooltip">Create event</string>
    <string name="main_create_event_rsvp">@string/text_rsvp</string>

    <string name="invite_button_text">Invite</string>
    <string name="invite_new_invitees_text">New invitees:</string>

    <string name="no_internet_connection_title">Internet connection disappeared</string>
    <string name="no_internet_connection_description">How would you network without network connection?</string>

    <string name="error_main_create_event_invalid_place">Invalid place selected.</string>

    <string name="invite_action_add_user">Add user</string>
    <string name="invite_action_clear_all">Clear all</string>
    <string name="invite_found_text">Found</string>
    <string name="invite_search_label">Searching</string>
    <string name="invite_search_label_found">Results</string>
    <string name="invite_search_label_not_found">Not found</string>
    <string name="filter"> Filter: </string>

</resources>
